styles test width scroll

--- a/src/components/customScrollBar/CustomScrollBar.css
+++ b/src/components/customScrollBar/CustomScrollBar.css
@@ -7,10 +7,19 @@
   width: 3px;
   height: 100%;
 }
-.os-scrollbar--os-track-bg {
+.os-scrollbar--os-padding-axis {
   background-color: red;
 }
 
 .--os-track-bg {
   background-color: red;
+}
+
+// horizontal scrollbar is 12px
+.os-theme-custom.os-scrollbar-horizontal {
+  --os-size: 12px;
+}
+// vertical scrollbar is 8px
+.os-theme-custom.os-scrollbar-vertical {
+  --os-size: 8px;
 }
