--- a/src/components/reactConfirmAlert/ReactConfirmAlert.styled.css
+++ b/src/components/reactConfirmAlert/ReactConfirmAlert.styled.css
@@ -1,47 +1,51 @@
+#react-confirm-alert .react-confirm-alert-overlay.undefined {
+  background-color: rgba(21, 21, 21, 0.5) !important;
+}
+
 .react-confirm-alert-light {
-    background-color: #ffffff;
-    color: #333333;
-  }
-  
-  .react-confirm-alert-dark {
-    background-color: #333333;
-    color: #ffffff;
-  }
-  
-  .react-confirm {
-    padding: 20px;
-    margin: 10px;
-    border: 1px solid black; 
-    border-radius: 5px; 
-  }
-  
-  .confirm-buttons {
-    margin-top: 20px;
-    color: white;
-    display: flex;
-    flex-direction: row;
-    gap: 20px; 
-  }
+  background-color: #ffffff;
+  color: #333333;
+}
 
-  .green {
-    background-color: green;
-    border: 1px solid black; 
-    padding: 10px;
-    border-radius: 5px; 
-    transition: background-color 0.3s ease;
-  }
-  .green:hover {
-    background-color: rgb(64, 212, 64);
-  }
+.react-confirm-alert-dark {
+  background-color: #333333;
+  color: #ffffff;
+}
 
-  .red {
-    background-color: red;
-    border: 1px solid black; 
-    padding: 10px;
-    border-radius: 5px; 
-    transition: background-color 0.3s ease;
-  }
+.react-confirm {
+  padding: 20px;
+  margin: 10px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
 
-  .red:hover {
-    background-color: rgb(239, 68, 68);
-  }
+.confirm-buttons {
+  margin-top: 20px;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.green {
+  background-color: green;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+.green:hover {
+  background-color: rgb(64, 212, 64);
+}
+
+.red {
+  background-color: red;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.red:hover {
+  background-color: rgb(239, 68, 68);
+}
